Mover listeners to sidepanel_UI.js

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -518,6 +518,7 @@
     <div id="dropTarget" class="drop-target">
       Drop files here to encrypt or decrypt
     </div>
+    <button id="close-manual-files" style="padding: 2px 8px; cursor: pointer;">Close file drop target</button>
   </div>
 
   <!-- Libraries and Scripts -->
@@ -528,13 +529,13 @@
   <script src="lib/lz-string.js"></script>
   <script src="src/dictionary_en.js"></script>
   <!--script src="src/crypto.js"></script-->
-  <script src="sidepanel_UI.js"></script>
   <script src="directory_editor.js"></script>
   <script src="crypto-common.js"></script>
   <script src="sidepanel_notes.js"></script>
   <script src="sidepanel_passwords.js"></script>
   <script src="sidepanel_decrypt.js"></script>
   <script src="sidepanel_encrypt.js"></script>
+  <script src="sidepanel_UI.js"></script>
 </body>
 
 </html>
