added Read-once as a copy of Signed mode

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -366,6 +366,7 @@
       style="display: flex; flex-direction: row; flex-wrap: nowrap; justify-content: center; align-items: center; gap: 5px; font-size: 0.75rem; width: 100%;">
       <label><input type="radio" name="lockmodes" id="signedMode" checked> Signed</label>
       <label><input type="radio" name="lockmodes" id="anonMode"> Anonymous</label>
+      <label><input type="radio" name="lockmodes" id="onceMode"> Read once</label>
       <span class="divider">|</span>
       <label title="Prepend your Lock"><input type="checkbox" id="includeLock" checked> Add my Lock</label>
     </div>
