--- a/sidepanel.html
+++ b/sidepanel.html
@@ -300,7 +300,8 @@
       </div>
       <!-- Inside #card-note in sidepanel.html -->
       <div style="margin-top: 12px; border-top: 1px solid #eee; padding-top: 10px;">
-        <button id="manual-file-mode-btn" class="btn-secondary" style="width: 100%;">Encrypt/Decrypt Files</button>
+        <button id="manual-file-mode-btn" class="btn-secondary" style="width: 100%;">Encrypt/Decrypt Files and
+          Images</button>
       </div>
     </div>
   </div>
@@ -368,7 +369,12 @@
       <label><input type="radio" name="lockmodes" id="anonMode"> Anonymous</label>
       <label><input type="radio" name="lockmodes" id="onceMode"> Read once</label>
       <span class="divider">|</span>
-      <label title="Prepend your Lock"><input type="checkbox" id="includeLock" checked> Add my Lock</label>
+      <span id="add-lock-container">
+        <label title="Prepend your Lock"><input type="checkbox" id="includeLock" checked> Add my Lock</label>
+      </span>
+      <label id="stego-toggle-container" title="Hide message in an image">
+        <input type="checkbox" id="stegoModeToggle"> Hide in Image
+      </label>
     </div>
 
     <!-- SHARED: Toolbar -->
@@ -511,6 +517,25 @@
       </div>
     </div>
 
+    <!-- Stego Image Container -->
+    <div id="stego-image-container" class="hidden"
+      style="margin-top: 10px; border: 2px dashed #ccc; border-radius: 4px; padding: 10px; text-align: center; background: #f9f9f9; cursor: pointer;">
+      <div id="stego-placeholder" style="color: #666; font-size: 13px;">Click here to load cover image</div>
+      <img id="stego-image-preview" style="max-width: 100%; display: none; margin: 0 auto; border: 1px solid #ddd;">
+      <div id="stego-capacity-display" class="hidden"
+        style="font-size: 11px; color: #2563eb; margin-top: 5px; font-weight: bold;">
+        Capacity: <span id="stego-capacity-value">0</span> bytes
+      </div>
+      <div id="stego-actions" class="hidden" style="display: flex; flex-direction: row; gap: 5px;">
+        <button id="stego-encrypt-png" class="btn" style="flex: 1;">Encrypt to
+          PNG</button>
+        <button id="stego-encrypt-jpg" class="btn" style="flex: 1;">Encrypt to
+          JPG</button>
+        <button id="stego-decrypt-btn" class="btn" style="flex: 1;">Extract and
+          Decrypt</button>
+      </div>
+    </div>
+
     <!-- Hidden file input for manual PLK loading -->
     <input type="file" id="plkFileInput" accept=".plk" style="display:none;" />
   </div>
@@ -519,7 +544,7 @@
     <div id="dropTarget" class="drop-target">
       Drop files here to encrypt or decrypt
     </div>
-    <button id="close-manual-files" style="padding: 2px 8px; cursor: pointer;">Close file drop target</button>
+    <button id="close-manual-files" style="padding: 2px 8px; cursor: pointer;">Close file/image UI</button>
   </div>
 
   <!-- Libraries and Scripts -->
@@ -528,14 +553,20 @@
   <script src="lib/ed2curve.js"></script>
   <script src="lib/scrypt-async.js"></script>
   <script src="lib/lz-string.js"></script>
+  <script src="lib/purify.js"></script>
+  <script src="lib/jssteg.js"></script>
+  <script src="lib/jsstegencoder.js"></script>
+  <script src="lib/jsstegdecoder.js"></script>
   <script src="src/dictionary_en.js"></script>
-  <!--script src="src/crypto.js"></script-->
+  <script src="src/prng.js"></script>
+  <script src="src/plstego.js"></script>
   <script src="directory_editor.js"></script>
   <script src="crypto-common.js"></script>
   <script src="sidepanel_notes.js"></script>
   <script src="sidepanel_passwords.js"></script>
   <script src="sidepanel_decrypt.js"></script>
   <script src="sidepanel_encrypt.js"></script>
+  <script src="sidepanel_stego.js"></script>
   <script src="sidepanel_UI.js"></script>
 </body>
 
