stego working with folder keys

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -518,7 +518,7 @@
     </div>
 
     <!-- Stego Image Container -->
-    <div id="stego-image-container" class="hidden"
+    <div id="stego-image-container"
       style="margin-top: 10px; border: 2px dashed #ccc; border-radius: 4px; padding: 10px; text-align: center; background: #f9f9f9; cursor: pointer;">
       <div id="stego-placeholder" style="color: #666; font-size: 13px;">Click here to load cover image</div>
       <img id="stego-image-preview" style="max-width: 100%; display: none; margin: 0 auto; border: 1px solid #ddd;">
@@ -549,7 +549,6 @@
 
   <!-- Libraries and Scripts -->
   <script src="lib/nacl-fast.js"></script>
-  <script src="lib/nacl-util.js"></script>
   <script src="lib/ed2curve.js"></script>
   <script src="lib/scrypt-async.js"></script>
   <script src="lib/lz-string.js"></script>
